# ChatMux - RL Environment for Chat Message Prioritization
# OpenEnv Hackathon 2026

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatmux"
version = "0.1.0"
description = "ChatMux - RL Environment for Chat Message Prioritization"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.2",
    "rapidfuzz>=3.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
include-package-data = true
packages = ["server"]
package-dir = { "server" = "server" }

[project.scripts]
server = "server.app:main"
